--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Windows Home</title>
+  <title>WFL OS</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="icon.png" type="image/png">
   <!-- Preload Steam images -->
   <link rel="preload" href="/steam-logo-black-transparent.png" as="image">
   <link rel="preload" href="/Steam_icon_logo.png" as="image">
