--- a/index.html
+++ b/index.html
@@ -1,119 +1,153 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>WFL OS</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="icon.png" type="image/png">
-  <!-- Preload Steam images -->
-  <link rel="preload" href="/steam-logo-black-transparent.png" as="image">
-  <link rel="preload" href="/Steam_icon_logo.png" as="image">
-  <link rel="preload" href="/steamwhite.png" as="image">
-  <script>
-  </script>
-</head>
-<body>
-  <div class="loading-screen">
-    <div class="windows-loader">
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-    </div>
-  </div>
-
-  <div class="desktop hidden">
-    <div class="desktop-icons">
-      <div class="desktop-icon" onclick="handleUsersClick()">
-        <svg viewBox="0 0 24 24" style="width: 50px; height: 50px;">
-          <path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z" fill="#FFA000"/>
-          <path d="M20 8H4v10h16z" fill="#FFCA28"/>
-        </svg>
-        <span>Users</span>
-      </div>
-      <div class="desktop-icon" onclick="openSteam()">
-        <img src="/Steam_icon_logo.png" alt="Steam" style="width: 45px; height: 45px;">
-        <span>Steam</span>
-      </div>
-      <div class="desktop-icon" onclick="openMayaStressRelief()">
-        <img src="/sims.png" alt="Maya Stress Relief" style="width: 45px; height: 45px;">
-        <span>Maya Stress Relief</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <title>WFLOS</title>
+    <link rel="stylesheet" href="css/styles.css?v=2" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
+    <!-- Preload Steam images -->
+    <link
+      rel="preload"
+      href="images/steam-logo-black-transparent.png"
+      as="image"
+    />
+    <link rel="preload" href="images/Steam_icon_logo.png" as="image" />
+    <link rel="preload" href="images/steamwhite.png" as="image" />
+    <script></script>
+  </head>
+  <body>
+    <div class="loading-screen">
+      <div class="windows-loader">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
       </div>
     </div>
 
-    <div class="explorer-window">
-      <div class="window-header">
-        <div class="window-title">
-          <svg class="folder-icon" viewBox="0 0 24 24">
-            <path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z" fill="#FFA000"/>
-            <path d="M20 8H4v10h16z" fill="#FFCA28"/>
+    <div class="desktop hidden">
+      <div class="desktop-icons">
+        <div class="desktop-icon" onclick="handleUsersClick()">
+          <svg viewBox="0 0 24 24" style="width: 50px; height: 50px">
+            <path
+              d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
+              fill="#FFA000"
+            />
+            <path d="M20 8H4v10h16z" fill="#FFCA28" />
           </svg>
           <span>Users</span>
         </div>
-        <div class="window-controls">
-          <div class="control minimize">─</div>
-          <div class="control maximize">□</div>
-          <div class="control close">×</div>
+        <div class="desktop-icon" onclick="openSteam()">
+          <img
+            src="images/Steam_icon_logo.png"
+            alt="Steam"
+            style="width: 45px; height: 45px"
+          />
+          <span>Steam</span>
+        </div>
+        <div class="desktop-icon" onclick="openMayaStressRelief()">
+          <img
+            src="images/sims.png"
+            alt="Maya Stress Relief"
+            style="width: 45px; height: 45px"
+          />
+          <span>Maya Stress Relief</span>
         </div>
       </div>
-      <div class="toolbar">
-        <div class="toolbar-group">
-          <button class="back-button">← Back</button>
-          <button disabled>Cut</button>
-          <button disabled>Copy</button>
-          <button disabled>Paste</button>
-        </div>
-        <div class="toolbar-group">
-          <button disabled>Sort</button>
-          <button disabled>View</button>
-        </div>
-      </div>
-      <div class="explorer-content">
-        <div class="sidebar">
-          <div class="sidebar-item active">
-            <svg viewBox="0 0 24 24" width="16" height="16">
-              <path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z" fill="#FFA000"/>
-              <path d="M20 8H4v10h16z" fill="#FFCA28"/>
+
+      <div class="explorer-window">
+        <div class="window-header">
+          <div class="window-title">
+            <svg class="folder-icon" viewBox="0 0 24 24">
+              <path
+                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
+                fill="#FFA000"
+              />
+              <path d="M20 8H4v10h16z" fill="#FFCA28" />
             </svg>
-            Users
+            <span>Users</span>
+          </div>
+          <div class="window-controls">
+            <div class="control minimize">─</div>
+            <div class="control maximize">□</div>
+            <div class="control close">×</div>
           </div>
         </div>
-        <div class="file-list">
-          <!-- Content will be dynamically populated -->
+        <div class="toolbar">
+          <div class="toolbar-group">
+            <button class="back-button">← Back</button>
+            <button disabled>Cut</button>
+            <button disabled>Copy</button>
+            <button disabled>Paste</button>
+          </div>
+          <div class="toolbar-group">
+            <button disabled>Sort</button>
+            <button disabled>View</button>
+          </div>
+        </div>
+        <div class="explorer-content">
+          <div class="sidebar">
+            <div class="sidebar-item active">
+              <svg viewBox="0 0 24 24" width="16" height="16">
+                <path
+                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
+                  fill="#FFA000"
+                />
+                <path d="M20 8H4v10h16z" fill="#FFCA28" />
+              </svg>
+              Users
+            </div>
+          </div>
+          <div class="file-list">
+            <!-- Content will be dynamically populated -->
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="taskbar">
-      <div class="start-button">
-        <svg class="waffle-logo" viewBox="0 0 24 24">
-          <circle cx="12" cy="12" r="11" fill="#deb887"/>
-          <path d="M4 12h16 M12 4v16" stroke="#8b4513" stroke-width="2"/>
-          <path d="M6.5 4v16 M17.5 4v16" stroke="#8b4513" stroke-width="1.5"/>
-          <path d="M4 6.5h16 M4 17.5h16" stroke="#8b4513" stroke-width="1.5"/>
-        </svg>
-        <span style="color: #deb887">Stroop</span>
+      <div class="taskbar">
+        <div class="start-button">
+          <svg class="waffle-logo" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="#deb887" />
+            <path d="M4 12h16 M12 4v16" stroke="#8b4513" stroke-width="2" />
+            <path
+              d="M6.5 4v16 M17.5 4v16"
+              stroke="#8b4513"
+              stroke-width="1.5"
+            />
+            <path
+              d="M4 6.5h16 M4 17.5h16"
+              stroke="#8b4513"
+              stroke-width="1.5"
+            />
+          </svg>
+          <span style="color: #deb887">Stroop</span>
+        </div>
+        <div class="taskbar-windows"></div>
+        <div class="time"></div>
       </div>
-      <div class="taskbar-windows"></div>
-      <div class="time"></div>
+      <div class="taskbar-pet">
+        <img src="media/idle.gif" alt="Pet" />
+      </div>
     </div>
-    <div class="taskbar-pet">
-      <img src="/idle.gif" alt="Pet">
-    </div>
-  </div>
 
-  <script type="module" src="main.js"></script>
-  <script>
-    function handleUsersClick() {
+    <script type="module" src="js/main.js?v=2"></script>
+    <script>
+      function handleUsersClick() {
         setTimeout(() => {
-            if (window.showPetMessage) {
-                window.showPetMessage("I don't think you're supposed to look in there, but it's not really my problem");
-            }
+          if (window.showPetMessage) {
+            window.showPetMessage("mYMY SAYS THIS IS HER FAVORITE PLACE1");
+          }
         }, 500);
         openExplorer();
-    }
-    // This model's code hurts to look at sometimes -R
-  </script>
-</body>
+      }
+      // This model's code hurts to look at sometimes -R
+    </script>
+  </body>
 </html>
