--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>WFLOS</title>
-    <link rel="stylesheet" href="css/styles.css?v=2" />
+    <link rel="stylesheet" href="css/styles.css?v=4" />
     <link rel="icon" href="images/icon.png" type="image/png" />
     <!-- Preload Steam images -->
     <link
@@ -137,12 +137,12 @@
       </div>
     </div>
 
-    <script type="module" src="js/main.js?v=2"></script>
+    <script type="module" src="js/main.js?v=4"></script>
     <script>
       function handleUsersClick() {
         setTimeout(() => {
           if (window.showPetMessage) {
-            window.showPetMessage("mYMY SAYS THIS IS HER FAVORITE PLACE1");
+            window.showPetMessage("At least she's organized...");
           }
         }, 500);
         openExplorer();
