--- a/MymyCraft/index.html
+++ b/MymyCraft/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MymyCraft - Find me</title>
-    <link rel="stylesheet" href="style.css?v=1">
+    <link rel="stylesheet" href="style.css?v=2">
     <script>
         // Prevent context menu on right-click to allow right-click for block placement
         document.addEventListener('contextmenu', function(event) {
@@ -38,6 +38,6 @@
     <!-- PointerLock controls for first-person camera -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/PointerLockControls.min.js"></script>
     <!-- MY game code -->
-    <script src="script.js"></script>
+    <script src="script.js?v=1"></script>
 </body>
 </html>
